--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
+    <head>
+
+        <title>mi primera pagina</title>
+        <meta charset="utf-8">
 
 
+    </head>
 
+    <body>
+        
+    </body>
 
 </html>
