feature-colocacion-de-parrafo-e-titulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 
     </head>
+      <h1>primer proyecto junto con git</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
 
+      </p>
     <body>
         
     </body>
