--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
 
     </head>
       <h1>primer proyecto junto con git</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
 
-      </p>
+        <div>
+          <h2>introduccion</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
+        
+          </p>
+        </div>
+
+
+        <div>
+             <h2>informacion</h2>
+             <h3>#importante</h3>
+             <h3>#ultimo momento</h3>
+             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio culpa voluptate aspernatur dolorum praesentium qui dolor, quibusdam repellat itaque quo adipisci omnis laudantium atque quod at ullam vel eum corrupti.
+
+             </p>
+
+        </div>
     <body>
         
     </body>
