--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 
     </head>
-      <h1>primer proyecto junto con git</h1>
+      
+    <body>
+        <h1>primer proyecto junto con git</h1>
 
         <div>
           <h2>introduccion</h2>
@@ -27,8 +29,20 @@
              </p>
 
         </div>
-    <body>
-        
+
+        <table>
+            <thead>
+            <tr>
+            <th colspan="2">The table header</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+            <td>The table body</td>
+            <td>with two columns</td>
+            </tr>
+            </tbody>
+            </table>
     </body>
 
 </html>
