feature-colocacion-del-logo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     </head>
       
     <body>
-        <h1>primer proyecto junto con git</h1>
+        <div>
+          <h1>primer proyecto junto con git</h1>
+        </div>
 
         <div>
           <h2>introduccion</h2>
+          <img src="C:\Users\marti\OneDrive\Escritorio\primer-proyecto\img\logo.jpg" alt="logo de la pagina"
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
         
