--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
 
         <title>mi primera pagina</title>
@@ -14,7 +15,7 @@
 
         <div>
           <h2>introduccion</h2>
-          <img src="C:\Users\marti\OneDrive\Escritorio\primer-proyecto\img\logo.jpg" alt="logo de la pagina"
+          <img src="C:\Users\marti\OneDrive\Escritorio\primer-proyecto\img\logo.jpg" alt="logo de la pagina" height="150"
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
         
