--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
         <title>mi primera pagina</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/estilos.css">
 
 
     </head>
@@ -15,7 +16,7 @@
 
         <div>
           <h2>introduccion</h2>
-          <img src="C:\Users\marti\OneDrive\Escritorio\primer-proyecto\img\logo.jpg" alt="logo de la pagina" height="150"
+          <img src="./img/logo.jpg" alt="logo de la pagina" height="150"
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corporis doloremque voluptatibus nisi voluptates at, quasi in. Perspiciatis, praesentium placeat, nulla voluptate dicta voluptas itaque minima quidem nesciunt iure facere?
         
