feature-ajuste-de-colores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
       
     <body>
-        <div>
+        <div id="titulo">
           <h1>primer proyecto junto con git</h1>
         </div>
 
@@ -24,11 +24,11 @@
         </div>
 
 
-        <div>
+        <div class="hashtag">
              <h2>informacion</h2>
              <h3>#importante</h3>
              <h3>#ultimo momento</h3>
-             <p>
+             <p id="info1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio culpa voluptate aspernatur dolorum praesentium qui dolor, quibusdam repellat itaque quo adipisci omnis laudantium atque quod at ullam vel eum corrupti.
 
              </p>
